--- a/index.html
+++ b/index.html
@@ -1,62 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="stylesheet" href="./css/style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <!-- Top line-->
-    <header class="">
+    <header>
       <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Studio</a></li>
-          <li><a href="./index.html">Portfolio</a></li>
-          <li><a href="./index.html">Contacts</a></li>
+        <a class="logo-link link" href="./index.html"
+          >Web<span class="logo-accent">Studio</span></a
+        >
+        <ul class="list">
+          <li>
+            <a class="nav-link link" href="./index.html">Studio</a>
+          </li>
+          <li>
+            <a class="nav-link link" href="./portfolio.html">Portfolio</a>
+          </li>
+          <li>
+            <a class="nav-link link" href="">Contacts</a>
+          </li>
         </ul>
       </nav>
       <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list">
+          <li>
+            <a class="address-link link" href="mailto:info@devstudio.com"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li>
+            <a class="address-link link" href="tel:+110001111111"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
         </ul>
       </address>
     </header>
     <main>
       <!-- Hero section -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="hero-section">
+        <h1 class="hero-title">Effective Solutions for Your Business</h1>
+        <button class="hero-btn" type="button">Order Service</button>
       </section>
       <!-- Advantages section -->
       <section>
-        <h2>Our advantages</h2>
-        <ul>
+        <h2 hidden>Our advantages</h2>
+        <ul class="list">
           <li>
-            <h3>Strategy</h3>
-            <p>
+            <h3 class="subtitle-advantages">Strategy</h3>
+            <p class="text-advantages">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
           <li>
-            <h3>Punctuality</h3>
-            <p>
+            <h3 class="subtitle-advantages">Punctuality</h3>
+            <p class="text-advantages">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
           <li>
-            <h3>Diligence</h3>
-            <p>
+            <h3 class="subtitle-advantages">Diligence</h3>
+            <p class="text-advantages">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
           <li>
-            <h3>Technologies</h3>
-            <p>
+            <h3 class="subtitle-advantages">Technologies</h3>
+            <p class="text-advantages">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -65,12 +88,13 @@
       </section>
       <!-- Feature section -->
       <section>
-        <h2>What are we doing</h2>
-        <ul>
+        <h2 class="feature-title">What are we doing</h2>
+        <ul class="list">
           <li>
             <img
               src="./images/feature/rectangle-1.jpg"
               width="360"
+              height="300"
               alt="Work PC"
             />
           </li>
@@ -78,6 +102,7 @@
             <img
               src="./images/feature/rectangle-2.jpg"
               width="360"
+              height="300"
               alt="Work phone"
             />
           </li>
@@ -85,58 +110,65 @@
             <img
               src="./images/feature/rectangle-3.jpg"
               width="360"
+              height="300"
               alt="Synk PC and phone"
             />
           </li>
         </ul>
       </section>
       <!-- Team section -->
-      <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+      <section class="team-section">
+        <h2 class="team-title">Our Team</h2>
+        <ul class="list">
+          <li class="content-img">
             <img
               src="./images/team/team-card-1.jpg"
               width="264"
+              height="260"
               alt="Mark Guerrero"
             />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="headline-team">Mark Guerrero</h3>
+            <p class="text-team">Product Designer</p>
           </li>
-          <li>
+          <li class="content-img">
             <img
               src="./images/team/team-card-2.jpg"
               width="264"
+              height="260"
               alt="Tom Ford"
             />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="headline-team">Tom Ford</h3>
+            <p class="text-team">Frontend Developer</p>
           </li>
-          <li>
+          <li class="content-img">
             <img
               src="./images/team/team-card-3.jpg"
               width="264"
+              height="260"
               alt="Camila Garcia"
             />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="headline-team">Camila Garcia</h3>
+            <p class="text-team">Marketing</p>
           </li>
-          <li>
+          <li class="content-img">
             <img
               src="./images/team/team-card-4.jpg"
               width="264"
+              height="260"
               alt="Daniel Wilson"
             />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="headline-team">Daniel Wilson</h3>
+            <p class="text-team">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <!-- Footer section -->
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+    <footer class="footer">
+      <a class="logo-link link" href="./index.html"
+        >WEB<span class="footer-logo-accent">Studio</span>
+      </a>
+      <p class="footer-text">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
