--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
           </li>
         </ul>
       </nav>
-      <address>
+      <address class="address">
         <ul class="list">
           <li>
             <a class="address-link link" href="mailto:info@devstudio.com"
@@ -46,9 +46,9 @@
         </ul>
       </address>
     </header>
-    <main>
-      <!-- Main Portfolio -->
-      <section>
+    <!-- Main Portfolio -->
+    <main class="portfolio-main">
+      <section class="container">
         <h1 hidden>Memu Portfolio</h1>
         <ul class="list">
           <li>
