re-checking the finishing touches hm-2

--- a/portfolio.html
+++ b/portfolio.html
@@ -70,96 +70,116 @@
         <!-- Advantages -->
         <ul class="list">
           <li>
-            <img
-              src="./images/portfolio/img-1.jpg"
-              width="360"
-              height="300"
-              alt="Banking App Interface Concept App"
-            />
-            <h2 class="heading-advantages">
-              Banking App Interface Concept App
-            </h2>
-            <p class="text-advantages">App</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img-1.jpg"
+                width="360"
+                height="300"
+                alt="Banking App Interface Concept App"
+              />
+              <h2 class="heading-advantages">
+                Banking App Interface Concept App
+              </h2>
+              <p class="text-advantages">App</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-2.jpg"
-              width="360"
-              height="300"
-              alt="Cashless Payment Marketing"
-            />
-            <h2 class="heading-advantages">Cashless Payment Marketing</h2>
-            <p class="text-advantages">Marketing</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img-2.jpg"
+                width="360"
+                height="300"
+                alt="Cashless Payment Marketing"
+              />
+              <h2 class="heading-advantages">Cashless Payment Marketing</h2>
+              <p class="text-advantages">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-3.jpg"
-              width="360"
-              height="300"
-              alt="Meditation App"
-            />
-            <h2 class="heading-advantages">Meditation App</h2>
-            <p class="text-advantages">App</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img-3.jpg"
+                width="360"
+                height="300"
+                alt="Meditation App"
+              />
+              <h2 class="heading-advantages">Meditation App</h2>
+              <p class="text-advantages">App</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-4.jpg"
-              width="360"
-              height="300"
-              alt="Taxi Service Marketing"
-            />
-            <h2 class="heading-advantages">Taxi Service Marketing</h2>
-            <p class="text-advantages">Marketing</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img-4.jpg"
+                width="360"
+                height="300"
+                alt="Taxi Service Marketing"
+              />
+              <h2 class="heading-advantages">Taxi Service Marketing</h2>
+              <p class="text-advantages">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-5.jpg"
-              width="360"
-              height="300"
-              alt="Screen Illustrations Design"
-            />
-            <h2 class="heading-advantages">Screen Illustrations Design</h2>
-            <p class="text-advantages">Design</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img-5.jpg"
+                width="360"
+                height="300"
+                alt="Screen Illustrations Design"
+              />
+              <h2 class="heading-advantages">Screen Illustrations Design</h2>
+              <p class="text-advantages">Design</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-6.jpg"
-              width="360"
-              height="300"
-              alt="Online Courses Marketing"
-            />
-            <h2 class="heading-advantages">Online Courses Marketing</h2>
-            <p class="text-advantages">Marketing</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img-6.jpg"
+                width="360"
+                height="300"
+                alt="Online Courses Marketing"
+              />
+              <h2 class="heading-advantages">Online Courses Marketing</h2>
+              <p class="text-advantages">Marketing</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-7.jpg"
-              width="360"
-              height="300"
-              alt="Instagram Stories Concept Design"
-            />
-            <h2 class="heading-advantages">Instagram Stories Concept Design</h2>
-            <p class="text-advantages">Design</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img-7.jpg"
+                width="360"
+                height="300"
+                alt="Instagram Stories Concept Design"
+              />
+              <h2 class="heading-advantages">
+                Instagram Stories Concept Design
+              </h2>
+              <p class="text-advantages">Design</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-8.jpg"
-              width="360"
-              height="300"
-              alt="Organic Food Web Site"
-            />
-            <h2 class="heading-advantages">Organic Food Web Site</h2>
-            <p class="text-advantages">Web Site</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img-8.jpg"
+                width="360"
+                height="300"
+                alt="Organic Food Web Site"
+              />
+              <h2 class="heading-advantages">Organic Food Web Site</h2>
+              <p class="text-advantages">Web Site</p>
+            </a>
           </li>
           <li>
-            <img
-              src="./images/portfolio/img-9.jpg"
-              width="360"
-              height="300"
-              alt="Fresh Coffee Web Site"
-            />
-            <h2 class="heading-advantages">Fresh Coffee Web Site</h2>
-            <p class="text-advantages">Web Site</p>
+            <a href="" class="link">
+              <img
+                src="./images/portfolio/img-9.jpg"
+                width="360"
+                height="300"
+                alt="Fresh Coffee Web Site"
+              />
+              <h2 class="heading-advantages">Fresh Coffee Web Site</h2>
+              <p class="text-advantages">Web Site</p>
+            </a>
           </li>
         </ul>
       </section>
