--- a/portfolio.html
+++ b/portfolio.html
@@ -77,9 +77,7 @@
                 height="300"
                 alt="Banking App Interface Concept App"
               />
-              <h2 class="heading-advantages">
-                Banking App Interface Concept App
-              </h2>
+              <h2 class="portfolio-title">Banking App Interface Concept App</h2>
               <p class="text-advantages">App</p>
             </a>
           </li>
@@ -91,7 +89,7 @@
                 height="300"
                 alt="Cashless Payment Marketing"
               />
-              <h2 class="heading-advantages">Cashless Payment Marketing</h2>
+              <h2 class="portfolio-title">Cashless Payment Marketing</h2>
               <p class="text-advantages">Marketing</p>
             </a>
           </li>
@@ -103,7 +101,7 @@
                 height="300"
                 alt="Meditation App"
               />
-              <h2 class="heading-advantages">Meditation App</h2>
+              <h2 class="portfolio-title">Meditation App</h2>
               <p class="text-advantages">App</p>
             </a>
           </li>
@@ -115,7 +113,7 @@
                 height="300"
                 alt="Taxi Service Marketing"
               />
-              <h2 class="heading-advantages">Taxi Service Marketing</h2>
+              <h2 class="portfolio-title">Taxi Service Marketing</h2>
               <p class="text-advantages">Marketing</p>
             </a>
           </li>
@@ -127,7 +125,7 @@
                 height="300"
                 alt="Screen Illustrations Design"
               />
-              <h2 class="heading-advantages">Screen Illustrations Design</h2>
+              <h2 class="portfolio-title">Screen Illustrations Design</h2>
               <p class="text-advantages">Design</p>
             </a>
           </li>
@@ -139,7 +137,7 @@
                 height="300"
                 alt="Online Courses Marketing"
               />
-              <h2 class="heading-advantages">Online Courses Marketing</h2>
+              <h2 class="portfolio-title">Online Courses Marketing</h2>
               <p class="text-advantages">Marketing</p>
             </a>
           </li>
@@ -151,9 +149,7 @@
                 height="300"
                 alt="Instagram Stories Concept Design"
               />
-              <h2 class="heading-advantages">
-                Instagram Stories Concept Design
-              </h2>
+              <h2 class="portfolio-title">Instagram Stories Concept Design</h2>
               <p class="text-advantages">Design</p>
             </a>
           </li>
@@ -165,7 +161,7 @@
                 height="300"
                 alt="Organic Food Web Site"
               />
-              <h2 class="heading-advantages">Organic Food Web Site</h2>
+              <h2 class="portfolio-title">Organic Food Web Site</h2>
               <p class="text-advantages">Web Site</p>
             </a>
           </li>
@@ -177,7 +173,7 @@
                 height="300"
                 alt="Fresh Coffee Web Site"
               />
-              <h2 class="heading-advantages">Fresh Coffee Web Site</h2>
+              <h2 class="portfolio-title">Fresh Coffee Web Site</h2>
               <p class="text-advantages">Web Site</p>
             </a>
           </li>
