--- a/portfolio.html
+++ b/portfolio.html
@@ -70,111 +70,111 @@
         <!-- Advantages -->
         <ul class="list">
           <li>
-            <a href="" class="link">
-              <img
+            <a href="" class="link"
+              ><img
                 src="./images/portfolio/img-1.jpg"
                 width="360"
                 height="300"
-                alt="Banking App Interface Concept App"
+                alt="Product"
               />
-              <h2 class="portfolio-title">Banking App Interface Concept App</h2>
-              <p class="text-advantages">App</p>
+              <h2 class="portfolio-title">Banking App Interface Concept</h2>
+              <p class="portfolio-paragraph">App</p>
             </a>
           </li>
           <li>
-            <a href="" class="link">
-              <img
+            <a href="" class="link"
+              ><img
                 src="./images/portfolio/img-2.jpg"
                 width="360"
                 height="300"
-                alt="Cashless Payment Marketing"
+                alt="Product"
               />
-              <h2 class="portfolio-title">Cashless Payment Marketing</h2>
-              <p class="text-advantages">Marketing</p>
+              <h2 class="portfolio-title">Cashless Payment</h2>
+              <p class="portfolio-paragraph">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="" class="link">
-              <img
+            <a href="" class="link"
+              ><img
                 src="./images/portfolio/img-3.jpg"
                 width="360"
                 height="300"
-                alt="Meditation App"
+                alt="Product"
               />
               <h2 class="portfolio-title">Meditation App</h2>
-              <p class="text-advantages">App</p>
+              <p class="portfolio-paragraph">App</p>
             </a>
           </li>
           <li>
-            <a href="" class="link">
-              <img
+            <a href="" class="link"
+              ><img
                 src="./images/portfolio/img-4.jpg"
                 width="360"
                 height="300"
-                alt="Taxi Service Marketing"
+                alt="Product"
               />
-              <h2 class="portfolio-title">Taxi Service Marketing</h2>
-              <p class="text-advantages">Marketing</p>
+              <h2 class="portfolio-title">Taxi Service</h2>
+              <p class="portfolio-paragraph">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="" class="link">
-              <img
+            <a href="" class="link"
+              ><img
                 src="./images/portfolio/img-5.jpg"
                 width="360"
                 height="300"
-                alt="Screen Illustrations Design"
+                alt="Product"
               />
-              <h2 class="portfolio-title">Screen Illustrations Design</h2>
-              <p class="text-advantages">Design</p>
+              <h2 class="portfolio-title">Screen Illustrations</h2>
+              <p class="portfolio-paragraph">Design</p>
             </a>
           </li>
           <li>
-            <a href="" class="link">
-              <img
+            <a href="" class="link"
+              ><img
                 src="./images/portfolio/img-6.jpg"
                 width="360"
                 height="300"
-                alt="Online Courses Marketing"
+                alt="Product"
               />
-              <h2 class="portfolio-title">Online Courses Marketing</h2>
-              <p class="text-advantages">Marketing</p>
+              <h2 class="portfolio-title">Online Courses</h2>
+              <p class="portfolio-paragraph">Marketing</p>
             </a>
           </li>
           <li>
-            <a href="" class="link">
-              <img
+            <a href="" class="link"
+              ><img
                 src="./images/portfolio/img-7.jpg"
                 width="360"
                 height="300"
-                alt="Instagram Stories Concept Design"
+                alt="Product"
               />
-              <h2 class="portfolio-title">Instagram Stories Concept Design</h2>
-              <p class="text-advantages">Design</p>
+              <h2 class="portfolio-title">Instagram Stories Concept</h2>
+              <p class="portfolio-paragraph">Design</p>
             </a>
           </li>
           <li>
-            <a href="" class="link">
-              <img
+            <a href="" class="link"
+              ><img
                 src="./images/portfolio/img-8.jpg"
                 width="360"
                 height="300"
-                alt="Organic Food Web Site"
+                alt="Product"
               />
-              <h2 class="portfolio-title">Organic Food Web Site</h2>
-              <p class="text-advantages">Web Site</p>
+              <h2 class="portfolio-title">Organic Food</h2>
+              <p class="portfolio-paragraph">Web Site</p>
             </a>
           </li>
           <li>
-            <a href="" class="link">
-              <img
+            <a href="" class="link"
+              ><img
                 src="./images/portfolio/img-9.jpg"
                 width="360"
                 height="300"
-                alt="Fresh Coffee Web Site"
+                alt="Product"
               />
-              <h2 class="portfolio-title">Fresh Coffee Web Site</h2>
-              <p class="text-advantages">Web Site</p>
+              <h2 class="portfolio-title">Fresh Coffee</h2>
+              <p class="portfolio-paragraph">Web Site</p>
             </a>
           </li>
         </ul>
